<resources>
    <string name="app_name" translatable="false">Nexpenses</string>
    <string name="app_description">Gerenciador financeiro minimalista, intuitivo, bonito e customizável para Android 4.0 e superiores</string>

    <!-- Labels -->
    <string name="action_lancamentos">Lançamentos</string>
    <string name="action_categorias">Categorias</string>
    <string name="action_graficos">Gráficos</string>
    <string name="action_apoie_desenvolvimento">Apoie o Desenvolvimento</string>
    <string name="action_settings">Configurações</string>
    <string name="action_about">Ajuda e Feedback</string>

    <!-- Buttons -->
    <string name="button_cancel">Cancelar</string>
    <string name="button_ok">OK</string>
    <string name="button_undo">Voltar</string>

    <string name="search">Pesquisar</string>
    <string name="search_hint">Pesquisar...</string>
    <string name="search_noresults">No results were found for your search</string>

    <!-- Lancamento -->
    <string name="valor">Valor</string>


    <!-- Settings -->
    <string name="settings_bkp">Backup</string>
    <string name="settings_password">Senha</string>
    <string name="settings_password_description">Exigir senha ao iniciar o aplicativo.</string>
    <string name="settings_export">Exportar dados</string>
    <string name="settings_export_description">Exportar dados para o armazenamento do dispositivo.</string>
    <string name="settings_import">Importar dados</string>
    <string name="settings_import_description">Importar dados do armazenamento do dispositivo e substituir os dados do aplicativo</string>

    <string name="settings_sort_mode">Classificar por</string>
    <string name="settings_customizations">Temas (Necessário Android 5.0+)</string>
    <string name="settings_primary_color">Cor Primária</string>
    <string name="settings_primary_color_description">A cor primária a ser usada. Padrão é Material Blue.</string>
    <string name="settings_fab_color">Cor de destaque</string>
    <string name="settings_fab_color_description">A cor de destaque a ser usada. Padrão é Material Pink.</string>
    <string name="settings_navigation_black">Barra de navegação colorida</string>
    <string name="settings_navigation_black_description">Colorir a barra de navegação do sistema com a cor primária.</string>
    <string name="settings_default_customization">Restaurar padrão</string>
    <string name="settings_default_customization_description">Restaurar as cores para os valores padrão.</string>
    <string name="settings_googleplay">Avaliar na Google Play</string>
    <string name="settings_googleplay_description">Você tem alguns segundos para avaliar este aplicativo? Queremos ouvir a sua opinião</string>
    <string name="settings_report_bugs">Reporte bugs ou requisite funções</string>
    <string name="settings_about">Sobre o aplicativo</string>

    <!-- About -->
    <string name="about_description_1">Desenvolvedor</string>

    <!-- Toasts -->
    <string name="tap_exit">Toque novamente para fechar o app</string>








    <string name="send_to">Send \"%s\" using</string>
    <string name="deleting">Excluindo...</string>
    <string name="loading">Carregando...</string>
    <string name="deleting_done">Files deleted!</string>
    <string name="deleting_error">Something went wrong removing the files</string>


    <!-- Dialogs -->
    <string name="dialog_saved">\"%s\" APK saved</string>
    <string name="dialog_saved_description">\"%1$s\" APK has been saved into \"MLManager\" folder with name: %2$s</string>
    <string name="dialog_saving">Saving %s APK...</string>
    <string name="dialog_saving_description">ML Manager is saving the APK into \"MLManager\" folder.</string>
    <string name="dialog_about">About %s</string>
    <string name="dialog_about_description">Developed by Javier Santos.\n\nOpen Source under GPLv3 license.</string>
    <string name="dialog_run">Open</string>
    <string name="dialog_run_description">Run this app now</string>
    <string name="dialog_extract">Extract</string>
    <string name="dialog_extract_description">Extract this app under \"MLManager\" directory</string>
    <string name="dialog_extract_fail">Extract failed</string>
    <string name="dialog_extract_fail_description">Unable to extract this APK. Please, try to restart your device.</string>
    <string name="dialog_uninstall">Uninstall</string>
    <string name="dialog_uninstall_description">Uninstall this app right now</string>
    <string name="dialog_cache">Remove cache</string>
    <string name="dialog_cache_description">Remove the cache for this app</string>
    <string name="dialog_cache_success">Cache deleted</string>
    <string name="dialog_cache_success_description">Cache for %1$s has been removed</string>
    <string name="dialog_cache_deleting">Deleting cache files...</string>
    <string name="dialog_cache_deleting_description">Please wait while cache files are being deleted.</string>
    <string name="dialog_clear_data">Clear data</string>
    <string name="dialog_clear_data_description">Remove all application data for this app</string>
    <string name="dialog_clear_data_deleting">Deleting all files...</string>
    <string name="dialog_clear_data_deleting_description">Please wait while all files are being deleted.</string>
    <string name="dialog_clear_data_success">Data deleted</string>
    <string name="dialog_clear_data_success_description">All data for %1$s has been removed</string>
    <string name="dialog_cache_and_data_error">Root required</string>
    <string name="dialog_cache_and_data_error_description">To delete data your phone must be rooted and root permission should be given. If you have denied access once. Go to SuperUser app to give access to MLManager.</string>



    <string name="button_extract">Extract</string>
    <string name="button_share">Share APK</string>



</resources>
