<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:id="@+id/relativeLayout1">
        <TextView
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:scaleType="centerCrop"
            android:background="@color/primary" />
        <ImageView
            android:id="@+id/app_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />
        <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="22dp"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal"
            android:layout_below="@id/app_icon"
            android:layout_centerHorizontal="true" />
        <TextView
            android:id="@+id/app_description"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-thin"
            android:text="@string/app_description"
            android:lines="3"
            android:textSize="15dp"
            android:textColor="@color/white"
            android:gravity="center_horizontal"
            android:layout_below="@id/app_name"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/relativeLayout1">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/about_1"
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:foreground="?android:attr/selectableItemBackground"
                card_view:cardCornerRadius="2dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:maxWidth="80dp"
                    android:maxHeight="80dp"
                    android:src="@drawable/about_raphael" />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:orientation="vertical">
                    <TextView
                        android:fontFamily="sans-serif-light"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Raphael Fuchter"
                        android:textSize="22dp" />
                    <TextView
                        android:fontFamily="sans-serif-thin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/about_description_1"
                        android:textSize="18dp" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:maxWidth="50dp"
                android:maxHeight="50dp"
                android:src="@drawable/facebook__logo"
                android:layout_below="@+id/about_1"
                android:layout_alignLeft="@+id/about_1"
                android:layout_alignStart="@+id/about_1"
                android:id="@+id/imageView"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/about_googleplay"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:foreground="?android:attr/selectableItemBackground"
                card_view:cardBackgroundColor="@color/card_blue"
                card_view:cardCornerRadius="2dp"
                android:layout_below="@+id/imageView"
                android:layout_alignLeft="@+id/imageView"
                android:layout_alignStart="@+id/imageView">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/ic_googleplay" />
                <TextView
                    android:fontFamily="sans-serif-light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_googleplay"
                    android:textColor="@android:color/white"
                    android:textSize="22dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"/>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/about_googleplus"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:foreground="?android:attr/selectableItemBackground"
                card_view:cardBackgroundColor="@color/card_orange"
                card_view:cardCornerRadius="2dp"
                android:layout_below="@+id/about_googleplay"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_alignLeft="@+id/about_googleplay"
                android:layout_alignStart="@+id/about_googleplay"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/about_mail"
                    android:maxWidth="55dp"/>
                <TextView
                    android:fontFamily="sans-serif-light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_report_bugs"
                    android:lines="2"
                    android:textColor="@android:color/white"
                    android:textSize="20dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="55dp"/>
            </android.support.v7.widget.CardView>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:maxWidth="50dp"
                android:maxHeight="50dp"
                android:src="@drawable/github_logo"
                android:id="@+id/imageView2"
                android:layout_below="@+id/about_1"
                android:layout_toLeftOf="@+id/imageView5"
                android:layout_toStartOf="@+id/imageView5"
                android:longClickable="false"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:maxWidth="50dp"
                android:maxHeight="50dp"
                android:src="@drawable/twitter_logo"
                android:id="@+id/imageView3"
                android:layout_below="@+id/about_1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:maxWidth="50dp"
                android:maxHeight="50dp"
                android:src="@drawable/facebook__logo"
                android:id="@+id/imageView4"
                android:layout_below="@+id/about_1"
                android:layout_toRightOf="@+id/imageView3"
                android:layout_toEndOf="@+id/imageView3"
                android:layout_marginLeft="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:maxWidth="50dp"
                android:maxHeight="50dp"
                android:src="@drawable/linkedin_logo"
                android:id="@+id/imageView5"
                android:layout_below="@+id/about_1"
                android:layout_alignRight="@+id/about_1"
                android:layout_alignEnd="@+id/about_1"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="30dp"/>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>